# internal/transport/http/handlers_product.go
@@ -10,6 +10,13 @@ import (
 	"github.com/gorilla/mux"
 )
 
+// @Summary Upsert: Agregar/modificar producto si recibe id en body
+// @Tags Product
+// @Accept json
+// @Produce json
+// @Param request body http.Product true "Product data"
+// @Success 200 {object} http.Product "OK"
+// @Router /api/product [patch]
 func (h *Handler) UpsertProduct(w http.ResponseWriter, r *http.Request) {
 	var p ecommerce.Product
 	if err := json.NewDecoder(r.Body).Decode(&p); err != nil {
@@ -31,6 +38,12 @@ func (h *Handler) UpsertProduct(w http.ResponseWriter, r *http.Request) {
 	}
 }
 
+// @Summary Obtener un producto
+// @Tags Product
+// @Produce json
+// @Param id path string true "Id producto"
+// @Success 200 {object} http.Product "OK"
+// @Router /api/product/{id} [get]
 func (h *Handler) GetProduct(w http.ResponseWriter, r *http.Request) {
 	vars := mux.Vars(r)
 	id := vars["id"]
@@ -53,6 +66,13 @@ func (h *Handler) GetProduct(w http.ResponseWriter, r *http.Request) {
 	}
 }
 
+// @Summary Listar productos con parametros opcionales de: orden por precio y buscar por nombre
+// @Tags Product
+// @Produce json
+// @Param order query string false "order options" Enums(ASC, DESC)
+// @Param search query string false "string name" example(string)
+// @Success 200 {array} http.Product "OK"
+// @Router /api/products [get]
 func (h *Handler) GetProducts(w http.ResponseWriter, r *http.Request) {
 	order := r.URL.Query().Get("order")
 	search := r.URL.Query().Get("search")
@@ -71,11 +91,11 @@ func (h *Handler) GetProducts(w http.ResponseWriter, r *http.Request) {
 	}
 }
 
-// @Summary Eliminar Producto
-// @Tags Products
+// @Summary Eliminar producto
+// @Tags Product
 // @Produce json
-// @Param id path string true "ID Producto"
-// @Success 200 {integer} int "OK"
+// @Param id path string true "Id Producto"
+// @Success 200 {object} http.message "OK"
 // @Router /api/product/{id} [delete]
 func (h *Handler) DeleteProduct(w http.ResponseWriter, r *http.Request) {
 	vars := mux.Vars(r)
@@ -93,7 +113,7 @@ func (h *Handler) DeleteProduct(w http.ResponseWriter, r *http.Request) {
 	}
 
 	if err := json.NewEncoder(w).Encode(
-		struct{ message string }{"successfully deleted"},
+		message{Message: "successfully deleted"},
 	); err != nil {
 		log.Println(err)
 		w.WriteHeader(http.StatusInternalServerError)
